syntax = "proto3";

package limiquantix.compute.v1;

option go_package = "github.com/limiquantix/limiquantix/pkg/api/compute/v1;computev1";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "limiquantix/compute/v1/node.proto";

// =============================================================================
// NODE SERVICE - Physical Host Management API
// =============================================================================

// NodeService provides management operations for physical compute nodes.
service NodeService {
  // ==========================================================================
  // CRUD Operations
  // ==========================================================================
  
  // RegisterNode adds a new node to the cluster.
  rpc RegisterNode(RegisterNodeRequest) returns (Node);
  
  // GetNode retrieves a node by ID.
  rpc GetNode(GetNodeRequest) returns (Node);
  
  // ListNodes returns all nodes in the cluster.
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  
  // UpdateNode updates node configuration.
  rpc UpdateNode(UpdateNodeRequest) returns (Node);
  
  // DecommissionNode removes a node from the cluster.
  // All VMs must be migrated first unless force=true.
  rpc DecommissionNode(DecommissionNodeRequest) returns (google.protobuf.Empty);
  
  // ==========================================================================
  // State Management
  // ==========================================================================
  
  // EnableNode marks a node as schedulable.
  rpc EnableNode(EnableNodeRequest) returns (Node);
  
  // DisableNode marks a node as unschedulable (maintenance mode).
  rpc DisableNode(DisableNodeRequest) returns (Node);
  
  // DrainNode migrates all VMs off the node.
  rpc DrainNode(DrainNodeRequest) returns (DrainNodeResponse);
  
  // ==========================================================================
  // Taints and Labels
  // ==========================================================================
  
  // AddTaint adds a taint to a node.
  rpc AddTaint(AddTaintRequest) returns (Node);
  
  // RemoveTaint removes a taint from a node.
  rpc RemoveTaint(RemoveTaintRequest) returns (Node);
  
  // UpdateLabels updates node labels.
  rpc UpdateLabels(UpdateLabelsRequest) returns (Node);
  
  // ==========================================================================
  // Heartbeat
  // ==========================================================================
  
  // UpdateHeartbeat updates the node's last seen time and resource usage.
  // Called periodically by the Node Daemon.
  rpc UpdateHeartbeat(UpdateHeartbeatRequest) returns (UpdateHeartbeatResponse);
  
  // ==========================================================================
  // VM Sync
  // ==========================================================================
  
  // SyncNodeVMs reports VMs running on a node to the control plane.
  // Called by the Node Daemon after registration to reconcile state.
  // DEPRECATED: Use SyncFullState instead for complete state reconciliation.
  rpc SyncNodeVMs(SyncNodeVMsRequest) returns (SyncNodeVMsResponse);
  
  // ==========================================================================
  // State Reconciliation (Agent-Push Model)
  // ==========================================================================
  
  // SyncFullState performs a complete state synchronization between the node and control plane.
  // Called on:
  //   - Startup (after registration)
  //   - Reconnect (after network failure)
  //   - Control plane request (anti-entropy drift detection)
  // This replaces SyncNodeVMs with a more comprehensive approach.
  rpc SyncFullState(SyncFullStateRequest) returns (SyncFullStateResponse);
  
  // NotifyVMChange sends a real-time notification when a VM state changes.
  // Called by the State Watcher when it detects a VM was created, updated, or deleted.
  // CRITICAL: The control plane must check if the VM exists before deciding
  // whether this is a "new discovery" or an update to an existing VM.
  rpc NotifyVMChange(VMChangeNotification) returns (VMChangeAck);
  
  // NotifyStorageChange sends a real-time notification when storage state changes.
  // Called by the State Watcher when a storage pool is added, modified, or removed.
  rpc NotifyStorageChange(StorageChangeNotification) returns (StorageChangeAck);
  
  // ==========================================================================
  // Monitoring
  // ==========================================================================
  
  // GetNodeMetrics returns current resource usage.
  rpc GetNodeMetrics(GetNodeMetricsRequest) returns (NodeMetrics);
  
  // ListNodeEvents returns recent events for a node.
  rpc ListNodeEvents(ListNodeEventsRequest) returns (ListNodeEventsResponse);
  
  // WatchNode streams real-time node status updates.
  rpc WatchNode(WatchNodeRequest) returns (stream Node);
  
  // WatchNodes streams updates for all nodes.
  rpc WatchNodes(WatchNodesRequest) returns (stream NodeUpdate);
  
  // ==========================================================================
  // Real-Time Streaming (for Host UI)
  // ==========================================================================
  
  // StreamNodeMetrics streams real-time node metrics at regular intervals.
  // Used by the Host UI for live dashboard updates.
  rpc StreamNodeMetrics(StreamNodeMetricsRequest) returns (stream NodeMetrics);
  
  // StreamEvents streams system events in real-time.
  // Used by the Host UI for event monitoring.
  rpc StreamEvents(StreamEventsRequest) returns (stream SystemEvent);
}

// =============================================================================
// REQUEST/RESPONSE MESSAGES
// =============================================================================

// RegisterNode

message RegisterNodeRequest {
  // Hostname
  string hostname = 1;
  
  // Management IP
  string management_ip = 2;
  
  // Initial labels
  map<string, string> labels = 3;
  
  // Node roles
  NodeRole role = 4;
  
  // Initial taints
  repeated Taint taints = 5;
  
  // Agent endpoint for verification
  string agent_endpoint = 6;
  
  // CPU information from telemetry
  CpuInfo cpu_info = 7;
  
  // Memory information from telemetry
  MemoryInfo memory_info = 8;
  
  // Storage devices detected on the node
  repeated StorageDevice storage_devices = 9;
  
  // Network interfaces detected on the node
  repeated NetworkDevice network_devices = 10;
}

// GetNode

message GetNodeRequest {
  string id = 1;
}

// ListNodes

message ListNodesRequest {
  // Filter by labels
  map<string, string> labels = 1;
  
  // Filter by phase
  repeated NodeStatus.Phase phases = 2;
  
  // Filter by role
  bool compute_only = 3;
  bool storage_only = 4;
  bool control_plane_only = 5;
  
  // Pagination
  int32 page_size = 10;
  string page_token = 11;
}

message ListNodesResponse {
  repeated Node nodes = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// UpdateNode

message UpdateNodeRequest {
  string id = 1;
  
  // Updated scheduling config
  SchedulingConfig scheduling = 2;
  
  // Updated role
  NodeRole role = 3;
  
  // Field mask
  google.protobuf.FieldMask update_mask = 4;
}

// DecommissionNode

message DecommissionNodeRequest {
  string id = 1;
  
  // Force removal even if VMs are running
  bool force = 2;
}

// EnableNode / DisableNode

message EnableNodeRequest {
  string id = 1;
}

message DisableNodeRequest {
  string id = 1;
  
  // Reason for disabling
  string reason = 2;
}

// DrainNode

message DrainNodeRequest {
  string id = 1;
  
  // Grace period for graceful shutdown (seconds)
  int32 grace_period_sec = 2;
  
  // Force drain (stop VMs that can't migrate)
  bool force = 3;
  
  // Target node for VMs (empty = auto-select)
  string target_node_id = 4;
}

message DrainNodeResponse {
  Node node = 1;
  
  // VMs that were migrated
  repeated string migrated_vm_ids = 2;
  
  // VMs that were stopped (couldn't migrate)
  repeated string stopped_vm_ids = 3;
  
  // VMs that failed
  repeated DrainFailure failures = 4;
}

message DrainFailure {
  string vm_id = 1;
  string error = 2;
}

// Taints

message AddTaintRequest {
  string node_id = 1;
  Taint taint = 2;
}

message RemoveTaintRequest {
  string node_id = 1;
  string taint_key = 2;
}

// Labels

message UpdateLabelsRequest {
  string node_id = 1;
  
  // Labels to add/update
  map<string, string> add_labels = 2;
  
  // Labels to remove
  repeated string remove_labels = 3;
}

// Heartbeat

message UpdateHeartbeatRequest {
  // Node ID (required)
  string node_id = 1;
  
  // Current CPU usage percentage (0-100)
  double cpu_usage_percent = 2;
  
  // Current memory usage in MiB
  uint64 memory_used_mib = 3;
  
  // Total memory in MiB
  uint64 memory_total_mib = 4;
  
  // Number of running VMs
  uint32 running_vm_count = 5;
  
  // Optional: disk usage
  uint64 disk_used_bytes = 6;
  uint64 disk_total_bytes = 7;
  
  // Optional: load averages
  double load_1m = 8;
  double load_5m = 9;
  double load_15m = 10;
  
  // Storage pool status reports (host is source of truth)
  repeated StoragePoolStatusReport storage_pools = 11;
  
  // State hash for anti-entropy drift detection.
  // SHA256 hash (first 16 hex chars) of current state: "{vm_id}:{state}:{change_count}\n" for each VM.
  // Used by control plane to detect if agent and CP are in sync.
  // If hashes don't match, control plane will request a full sync via response.
  string state_hash = 12;
}

// StoragePoolStatusReport - Host reports actual state of mounted storage pools
// This is the source of truth for capacity, usage, and health.
message StoragePoolStatusReport {
  // Pool ID (assigned by QvDC when pool was pushed to this host)
  string pool_id = 1;
  
  // Health status
  enum HealthStatus {
    HEALTH_UNKNOWN = 0;
    HEALTH_HEALTHY = 1;
    HEALTH_DEGRADED = 2;
    HEALTH_ERROR = 3;
    HEALTH_UNMOUNTED = 4;
  }
  HealthStatus health = 2;
  
  // Capacity (source of truth from host)
  uint64 total_bytes = 3;
  uint64 used_bytes = 4;
  uint64 available_bytes = 5;
  
  // Mount path on this host
  string mount_path = 6;
  
  // Number of volumes in this pool on this host
  uint32 volume_count = 7;
  
  // Error message if health is ERROR
  string error_message = 8;
  
  // Last successful mount time
  int64 last_mount_unix = 9;
}

message UpdateHeartbeatResponse {
  // Acknowledged
  bool acknowledged = 1;
  
  // Server time (for clock sync)
  int64 server_time_unix = 2;
  
  // Heartbeat interval in seconds (server can adjust)
  uint32 heartbeat_interval_secs = 3;
  
  // Storage pools that should be mounted on this host (desired state from QvDC)
  // Host should mount any pools in this list that are not yet mounted
  repeated string assigned_pool_ids = 4;
  
  // If true, control plane detected state drift (hash mismatch).
  // Agent should perform a full state sync via SyncFullState RPC.
  bool request_full_sync = 5;
}

// Metrics

message GetNodeMetricsRequest {
  string id = 1;
}

message NodeMetrics {
  string node_id = 1;
  
  // CPU metrics
  double cpu_usage_percent = 2;
  uint32 cpu_cores_total = 3;
  uint32 cpu_cores_allocated = 4;
  
  // Memory metrics
  uint64 memory_total_bytes = 5;
  uint64 memory_used_bytes = 6;
  uint64 memory_allocated_bytes = 7;
  uint64 memory_available_bytes = 8;
  
  // Storage metrics
  uint64 storage_total_bytes = 9;
  uint64 storage_used_bytes = 10;
  
  // Network metrics
  uint64 network_rx_bytes = 11;
  uint64 network_tx_bytes = 12;
  uint64 network_rx_errors = 13;
  uint64 network_tx_errors = 14;
  
  // VM count
  uint32 vm_count = 15;
  uint32 vm_running_count = 16;
  
  // Load average
  double load_1m = 17;
  double load_5m = 18;
  double load_15m = 19;
}

// Events

message ListNodeEventsRequest {
  string node_id = 1;
  
  // Filter by type
  repeated NodeEvent.EventType types = 2;
  
  // Limit
  int32 limit = 3;
}

message ListNodeEventsResponse {
  repeated NodeEvent events = 1;
}

// Watch

message WatchNodeRequest {
  string node_id = 1;
}

message WatchNodesRequest {
  // Filter by labels
  map<string, string> labels = 1;
}

message NodeUpdate {
  enum UpdateType {
    ADDED = 0;
    MODIFIED = 1;
    DELETED = 2;
  }
  UpdateType type = 1;
  Node node = 2;
}

// =============================================================================
// VM SYNC MESSAGES
// =============================================================================

// SyncNodeVMs - Report VMs from a node to the control plane

message SyncNodeVMsRequest {
  // Node ID (assigned by control plane during registration)
  string node_id = 1;
  
  // List of VMs currently on this node
  repeated NodeVMInfo vms = 2;
}

// NodeVMInfo contains basic VM info as reported by the hypervisor
message NodeVMInfo {
  // VM UUID (from libvirt)
  string id = 1;
  
  // VM name
  string name = 2;
  
  // Current state
  string state = 3;
  
  // CPU cores
  uint32 cpu_cores = 4;
  
  // Memory in MiB
  uint64 memory_mib = 5;
  
  // Disk paths
  repeated string disk_paths = 6;
}

message SyncNodeVMsResponse {
  // Number of VMs imported
  int32 imported_count = 1;
  
  // Number of VMs already known
  int32 existing_count = 2;
  
  // Any errors encountered
  repeated string errors = 3;
}

// =============================================================================
// STATE RECONCILIATION MESSAGES
// =============================================================================

// SyncFullState - Complete state synchronization from node to control plane

message SyncFullStateRequest {
  // Node ID (assigned by control plane during registration)
  string node_id = 1;
  
  // Host information update
  HostInfo host_info = 2;
  
  // All VMs currently on this node (STATUS only, not Spec)
  repeated VMStatusReport vms = 3;
  
  // All storage pools currently mounted on this node
  repeated StoragePoolStatusReport storage_pools = 4;
  
  // State hash of this sync (for verification)
  string state_hash = 5;
}

// HostInfo - Basic host information for sync
message HostInfo {
  string hostname = 1;
  string management_ip = 2;
  uint64 memory_total_bytes = 3;
  uint64 memory_available_bytes = 4;
  uint32 cpu_cores = 5;
  double cpu_usage_percent = 6;
}

// VMStatusReport - VM status as reported by the agent
// CRITICAL: This contains STATUS only, never Spec. Agent does not dictate desired state.
message VMStatusReport {
  // VM UUID (from libvirt)
  string id = 1;
  
  // VM name (display name from libvirt)
  string name = 2;
  
  // Current power state
  VMPowerState state = 3;
  
  // State change counter (increments on each state change, used for hash calculation)
  uint64 state_change_count = 4;
  
  // Runtime metrics (optional, for real-time monitoring)
  double cpu_usage_percent = 5;
  uint64 memory_used_bytes = 6;
  
  // IP addresses reported by guest agent (if available)
  repeated string ip_addresses = 7;
  
  // Last state change timestamp (unix seconds)
  int64 state_changed_at_unix = 8;
}

// VMPowerState - Power states for VM status reporting
enum VMPowerState {
  VM_POWER_STATE_UNKNOWN = 0;
  VM_POWER_STATE_RUNNING = 1;
  VM_POWER_STATE_STOPPED = 2;
  VM_POWER_STATE_PAUSED = 3;
  VM_POWER_STATE_SUSPENDED = 4;
  VM_POWER_STATE_CRASHED = 5;
  VM_POWER_STATE_MIGRATING = 6;
  VM_POWER_STATE_SHUTOFF = 7;
}

message SyncFullStateResponse {
  // Sync acknowledged
  bool acknowledged = 1;
  
  // Number of VMs reconciled
  int32 vms_reconciled = 2;
  
  // Number of new VMs discovered (not in control plane DB)
  int32 vms_discovered = 3;
  
  // Number of VMs marked as lost (in DB but not on node)
  int32 vms_lost = 4;
  
  // Number of storage pools reconciled
  int32 pools_reconciled = 5;
  
  // Any sync conflicts or errors
  repeated SyncConflict conflicts = 6;
}

// SyncConflict - Reports a conflict during sync
message SyncConflict {
  string resource_type = 1;  // "vm" or "storage_pool"
  string resource_id = 2;
  string conflict_type = 3;  // "missing_on_node", "missing_in_db", "state_mismatch"
  string message = 4;
}

// VMChangeNotification - Real-time VM change notification

message VMChangeNotification {
  // Node ID reporting the change
  string node_id = 1;
  
  // The VM that changed
  VMStatusReport vm = 2;
  
  // Type of change
  VMChangeEventType event_type = 3;
  
  // Timestamp of the change (unix seconds)
  int64 timestamp_unix = 4;
  
  // Previous state (for UPDATED events)
  VMPowerState previous_state = 5;
}

// VMChangeEventType - Types of VM change events
enum VMChangeEventType {
  VM_CHANGE_UNKNOWN = 0;
  VM_CHANGE_CREATED = 1;   // New VM appeared on node
  VM_CHANGE_UPDATED = 2;   // VM state changed (e.g., started, stopped)
  VM_CHANGE_DELETED = 3;   // VM was removed from node
}

message VMChangeAck {
  // Acknowledged
  bool acknowledged = 1;
  
  // Action taken by control plane
  string action = 2;  // "created", "status_updated", "ignored", "marked_lost"
  
  // Error message if any
  string error = 3;
}

// StorageChangeNotification - Real-time storage change notification

message StorageChangeNotification {
  // Node ID reporting the change
  string node_id = 1;
  
  // The storage pool that changed
  StoragePoolStatusReport pool = 2;
  
  // Type of change
  StorageChangeEventType event_type = 3;
  
  // Timestamp of the change (unix seconds)
  int64 timestamp_unix = 4;
}

// StorageChangeEventType - Types of storage change events
enum StorageChangeEventType {
  STORAGE_CHANGE_UNKNOWN = 0;
  STORAGE_CHANGE_MOUNTED = 1;    // Pool was mounted
  STORAGE_CHANGE_UNMOUNTED = 2;  // Pool was unmounted
  STORAGE_CHANGE_UPDATED = 3;    // Pool capacity/health changed
}

message StorageChangeAck {
  // Acknowledged
  bool acknowledged = 1;
  
  // Action taken by control plane
  string action = 2;
  
  // Error message if any
  string error = 3;
}

// =============================================================================
// STREAMING MESSAGES (for Host UI)
// =============================================================================

// StreamNodeMetrics - Real-time metrics streaming

message StreamNodeMetricsRequest {
  // Node ID (empty = current node for standalone mode)
  string node_id = 1;
  
  // Update interval in seconds (default: 2)
  uint32 interval_sec = 2;
}

// StreamEvents - Real-time event streaming

message StreamEventsRequest {
  // Node ID (empty = current node for standalone mode)
  string node_id = 1;
  
  // Filter by event types (empty = all)
  repeated SystemEvent.EventType types = 2;
}

// SystemEvent - System-level events for monitoring

message SystemEvent {
  // Event ID
  string id = 1;
  
  // Timestamp
  google.protobuf.Timestamp timestamp = 2;
  
  // Event type
  enum EventType {
    UNKNOWN = 0;
    
    // Service events
    SERVICE_STARTED = 1;
    SERVICE_STOPPED = 2;
    SERVICE_FAILED = 3;
    SERVICE_RESTARTED = 4;
    
    // VM events
    VM_CREATED = 10;
    VM_STARTED = 11;
    VM_STOPPED = 12;
    VM_CRASHED = 13;
    VM_DELETED = 14;
    
    // Hardware events
    HARDWARE_ADDED = 20;
    HARDWARE_REMOVED = 21;
    HARDWARE_FAILURE = 22;
    
    // Network events
    NETWORK_INTERFACE_UP = 30;
    NETWORK_INTERFACE_DOWN = 31;
    NETWORK_CONFIGURED = 32;
    
    // Storage events
    STORAGE_POOL_CREATED = 40;
    STORAGE_POOL_DELETED = 41;
    STORAGE_POOL_FULL = 42;
    VOLUME_CREATED = 43;
    VOLUME_DELETED = 44;
    
    // System events
    SYSTEM_BOOT = 50;
    SYSTEM_SHUTDOWN = 51;
    SYSTEM_REBOOT = 52;
    SYSTEM_OVERLOAD = 53;
    SYSTEM_RECOVERED = 54;
    
    // Error events
    ERROR_OCCURRED = 60;
    WARNING_ISSUED = 61;
  }
  EventType type = 3;
  
  // Severity
  enum Severity {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
    CRITICAL = 3;
  }
  Severity severity = 4;
  
  // Source component
  string source = 5;
  
  // Event message
  string message = 6;
  
  // Related resource ID (VM ID, pool ID, etc.)
  string resource_id = 7;
  
  // Additional metadata
  map<string, string> metadata = 8;
}
